--- a/src/mp.essentials.csproj
+++ b/src/mp.essentials.csproj
@@ -52,6 +52,12 @@
     <Reference Include="LzmaSharp">
       <HintPath>Dependencies\LzmaSharp.dll</HintPath>
     </Reference>
+    <Reference Include="md.stdl, Version=0.1.15.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.1.15-beta\lib\net461\md.stdl.dll</HintPath>
+    </Reference>
+    <Reference Include="mp.pddn, Version=1.1.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.1.1.7\lib\net461\mp.pddn.dll</HintPath>
+    </Reference>
     <Reference Include="MsgPack, Version=0.8.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.0.8.0\lib\net46\MsgPack.dll</HintPath>
       <Private>False</Private>
@@ -67,11 +73,20 @@
     <Reference Include="QuickGraph">
       <HintPath>Dependencies\QuickGraph.dll</HintPath>
     </Reference>
+    <Reference Include="SevenZip, Version=9.20.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\LZMA-SDK.9.20\lib\net20\SevenZip.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>packages\SharpDX.4.0.1\lib\net45\SharpDX.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.RawInput, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>packages\SharpDX.RawInput.4.0.1\lib\net45\SharpDX.RawInput.dll</HintPath>
+    </Reference>
     <Reference Include="SharpMessage, Version=2.9.10.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\SharpMessage.2.9.10\lib\net46\SharpMessage.dll</HintPath>
     </Reference>
-    <Reference Include="SimMetrics.Net, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\SimMetrics.Net.1.0.3\lib\net45\SimMetrics.Net.dll</HintPath>
+    <Reference Include="SimMetrics.Net, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\SimMetrics.Net.1.0.4\lib\net45\SimMetrics.Net.dll</HintPath>
     </Reference>
     <Reference Include="SlimDX, Version=4.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
       <HintPath>packages\VVVV.SlimDX.1.0.3\lib\net40\x86\SlimDX.dll</HintPath>
@@ -82,6 +97,13 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Interactive, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>packages\System.Interactive.3.1.1\lib\net45\System.Interactive.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Reactive, Version=4.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>packages\System.Reactive.4.0.0-preview00001\lib\net46\System.Reactive.dll</HintPath>
     </Reference>
@@ -177,12 +199,16 @@
     <Compile Include="graphs\FRLayoutNode.cs" />
     <Compile Include="messages\MessagePathExtensions.cs" />
     <Compile Include="messages\MessagePathNode.cs" />
-    <Compile Include="mp.essentials.extensions.cs" />
     <Compile Include="network\YoutubeDownloader.cs" />
     <Compile Include="network\http\ClientConstructNodes.cs" />
     <Compile Include="network\http\ClientSendNodes.cs" />
     <Compile Include="network\http\HeadersNodes.cs" />
     <Compile Include="network\http\HttpClient.cs" />
+    <Compile Include="notui\AbstractElementNode.cs" />
+    <Compile Include="notui\BasicElementNodes.cs" />
+    <Compile Include="notui\GuiElementInfoNode.cs" />
+    <Compile Include="notui\ContextNode.cs" />
+    <Compile Include="notui\EventsSplit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="quaternion\SpectralQuaternionMultiplyNode.cs" />
     <Compile Include="raw\RawLZMANode.cs" />
@@ -237,6 +263,7 @@
     <Compile Include="vvvv\GUITextBoxNode.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="vvvv\NodeGrapher.cs" />
     <Compile Include="vvvv\vvvvNodePathNode.cs" />
     <Compile Include="windows\HandleWindowsPIDNode.cs" />
     <Compile Include="windows\PIDWindowsHandleNode.cs" />
@@ -253,12 +280,6 @@
     <Content Include="vJoyInterface.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="PDDN\PDDN\PDDN.csproj">
-      <Project>{669ef59d-dd08-4080-98eb-cbdb45a8ec9c}</Project>
-      <Name>PDDN</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
