--- a/src/packages.config
+++ b/src/packages.config
@@ -2,11 +2,18 @@
 <packages>
   <package id="EPPlus" version="4.1.1" targetFramework="net461" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
+  <package id="LZMA-SDK" version="9.20" targetFramework="net461" />
+  <package id="md-stdl" version="0.1.15-beta" targetFramework="net461" />
+  <package id="mp.pddn" version="1.1.7" targetFramework="net461" />
   <package id="MsgPack.Cli" version="0.8.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="PowerArgs" version="2.8.1.0" targetFramework="net461" />
+  <package id="SharpDX" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
-  <package id="SimMetrics.Net" version="1.0.3" targetFramework="net461" />
+  <package id="SimMetrics.Net" version="1.0.4" targetFramework="net461" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.0.0-preview00001" targetFramework="net461" />
   <package id="System.Reactive.Core" version="4.0.0-preview00001" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="4.0.0-preview00001" targetFramework="net461" />
