--- a/src/mp.essentials.csproj
+++ b/src/mp.essentials.csproj
@@ -52,11 +52,11 @@
     <Reference Include="LzmaSharp">
       <HintPath>Dependencies\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.1.15.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.1.15-beta\lib\net461\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=0.1.27.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.1.27-beta\lib\net461\md.stdl.dll</HintPath>
     </Reference>
-    <Reference Include="mp.pddn, Version=1.1.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\mp.pddn.1.1.7\lib\net461\mp.pddn.dll</HintPath>
+    <Reference Include="mp.pddn, Version=1.1.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.1.1.8\lib\net461\mp.pddn.dll</HintPath>
     </Reference>
     <Reference Include="MsgPack, Version=0.8.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.0.8.0\lib\net46\MsgPack.dll</HintPath>
@@ -199,6 +199,7 @@
     <Compile Include="graphs\FRLayoutNode.cs" />
     <Compile Include="messages\MessagePathExtensions.cs" />
     <Compile Include="messages\MessagePathNode.cs" />
+    <Compile Include="MiscExtensions.cs" />
     <Compile Include="network\YoutubeDownloader.cs" />
     <Compile Include="network\http\ClientConstructNodes.cs" />
     <Compile Include="network\http\ClientSendNodes.cs" />
@@ -206,9 +207,13 @@
     <Compile Include="network\http\HttpClient.cs" />
     <Compile Include="notui\AbstractElementNode.cs" />
     <Compile Include="notui\BasicElementNodes.cs" />
+    <Compile Include="notui\GenericBehaviorNodes.cs" />
+    <Compile Include="notui\GenericElementInstanceNodes.cs" />
+    <Compile Include="notui\GenericElementPrototypeNodes.cs" />
     <Compile Include="notui\GuiElementInfoNode.cs" />
     <Compile Include="notui\ContextNode.cs" />
     <Compile Include="notui\EventsSplit.cs" />
+    <Compile Include="notui\NotuiUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="quaternion\SpectralQuaternionMultiplyNode.cs" />
     <Compile Include="raw\RawLZMANode.cs" />
@@ -244,6 +249,7 @@
     <Compile Include="transform\TransformGetQuaternionNode.cs" />
     <Compile Include="value\BeatValueLFO.cs" />
     <Compile Include="value\LongitudeLatitude.cs" />
+    <Compile Include="value\PulseNode.cs" />
     <Compile Include="value\Stopwatch.cs" />
     <Compile Include="value\ValueAllowFeedbackNode.cs" />
     <Compile Include="value\ValueCountSpreadsNode.cs" />
