--- a/src/mp.essentials.csproj
+++ b/src/mp.essentials.csproj
@@ -55,11 +55,11 @@
     <Reference Include="LzmaSharp">
       <HintPath>Dependencies\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.1.32.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.1.32-beta\lib\net461\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=0.1.34.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.1.34-beta\lib\net461\md.stdl.dll</HintPath>
     </Reference>
-    <Reference Include="mp.pddn, Version=1.1.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\mp.pddn.1.1.8\lib\net461\mp.pddn.dll</HintPath>
+    <Reference Include="mp.pddn, Version=1.1.11.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.1.1.11\lib\net461\mp.pddn.dll</HintPath>
     </Reference>
     <Reference Include="MsgPack, Version=0.8.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.0.8.0\lib\net46\MsgPack.dll</HintPath>
@@ -195,6 +195,7 @@
     <Compile Include="excel\OoXmlCell.cs" />
     <Compile Include="excel\SplitNodes.cs" />
     <Compile Include="generic\CastToAll.cs" />
+    <Compile Include="generic\DictionaryNodes.cs" />
     <Compile Include="generic\GenericAsObjectNode.cs" />
     <Compile Include="generic\GenericKeepLastNode.cs" />
     <Compile Include="generic\GenericZip.cs" />
@@ -226,6 +227,7 @@
     <Compile Include="notui\ElementInfoNode.cs" />
     <Compile Include="notui\ContextNode.cs" />
     <Compile Include="notui\EventsSplit.cs" />
+    <Compile Include="notui\AttachedValuesNodes.cs" />
     <Compile Include="notui\NotuiUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="quaternion\SpectralQuaternionMultiplyNode.cs" />
@@ -245,7 +247,6 @@
     <Compile Include="string\BinStringFindNode.cs" />
     <Compile Include="string\ControlDragAndDropNode.cs" />
     <Compile Include="string\FixStringClipboardNode.cs" />
-    <Compile Include="string\SetStringDictionaryNode.cs" />
     <Compile Include="string\StatesStateServerNode.cs" />
     <Compile Include="string\StringAddHeadCutTailNode.cs" />
     <Compile Include="string\StringDistanceNodes.cs" />
