--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -92,12 +92,13 @@
     </Reference>
     <Reference Include="SlimDX, Version=4.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\SlimDX.dll</HintPath>
+      <HintPath>dlls\vvvvlib\SlimDX.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition.CodePlex, Version=4.1.2.0, Culture=neutral, PublicKeyToken=13e5ffd4e05db186, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\System.ComponentModel.Composition.CodePlex.dll</HintPath>
+    <Reference Include="System.ComponentModel.Composition.CodePlex">
+      <HintPath>dlls\vvvvlib\System.ComponentModel.Composition.CodePlex.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -135,8 +136,10 @@
     <Reference Include="System.Reactive.Windows.Threading, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>packages\System.Reactive.Windows.Threading.4.0.0-preview00001\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
     </Reference>
-    <Reference Include="System.Reflection.Context.CodePlex">
-      <HintPath>dlls\System.Reflection.Context.CodePlex.dll</HintPath>
+    <Reference Include="System.Reflection.Context.CodePlex, Version=4.1.2.0, Culture=neutral, PublicKeyToken=13e5ffd4e05db186, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dlls\vvvvlib\System.Reflection.Context.CodePlex.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -147,33 +150,33 @@
     <Reference Include="vJoyInterfaceWrap">
       <HintPath>dlls\vJoyInterfaceWrap.dll</HintPath>
     </Reference>
-    <Reference Include="VVVV.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.Core.dll</HintPath>
+    <Reference Include="VVVV.Core">
+      <HintPath>dlls\vvvvlib\VVVV.Core.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Hosting, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.Hosting.dll</HintPath>
+    <Reference Include="VVVV.Hosting">
+      <HintPath>dlls\vvvvlib\VVVV.Hosting.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Nodes.Generic, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.Nodes.Generic.dll</HintPath>
+    <Reference Include="VVVV.Nodes.Generic">
+      <HintPath>dlls\vvvvlib\VVVV.Nodes.Generic.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.PluginInterfaces, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.PluginInterfaces.dll</HintPath>
+    <Reference Include="VVVV.PluginInterfaces">
+      <HintPath>dlls\vvvvlib\VVVV.PluginInterfaces.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Utils, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.Utils.dll</HintPath>
+    <Reference Include="VVVV.Utils">
+      <HintPath>dlls\vvvvlib\VVVV.Utils.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.Utils3rdParty, Version=35.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.Utils3rdParty.dll</HintPath>
+    <Reference Include="VVVV.Utils3rdParty">
+      <HintPath>dlls\vvvvlib\VVVV.Utils3rdParty.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="VVVV.UtilsIL, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>dlls\VVVV.UtilsIL.dll</HintPath>
+    <Reference Include="VVVV.UtilsIL">
+      <HintPath>dlls\vvvvlib\VVVV.UtilsIL.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="YoutubeExtractor">
@@ -181,6 +184,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.cs" />
     <Compile Include="boolean\BitwiseValueORNode.cs" />
     <Compile Include="boolean\BitwiseValueSplitUint32Node.cs" />
     <Compile Include="boolean\BooleanQRCodeNode.cs" />
