--- a/packages.config
+++ b/packages.config
@@ -3,14 +3,15 @@
   <package id="EPPlus" version="4.1.1" targetFramework="net461" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net461" />
-  <package id="md-stdl" version="0.1.45-beta" targetFramework="net47" />
+  <package id="md-stdl" version="0.1.47-beta" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="mp.pddn" version="1.1.24" targetFramework="net47" />
+  <package id="mp.pddn" version="1.1.26" targetFramework="net47" />
   <package id="MsgPack.Cli" version="0.8.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="PowerArgs" version="2.8.1.0" targetFramework="net461" />
+  <package id="SharpCompress" version="0.20.0" targetFramework="net47" />
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
