--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -54,11 +54,11 @@
     <Reference Include="LzmaSharp">
       <HintPath>dlls\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.1.45.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.1.45-beta\lib\net47\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=0.1.47.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.1.47-beta\lib\net47\md.stdl.dll</HintPath>
     </Reference>
-    <Reference Include="mp.pddn, Version=1.1.24.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\mp.pddn.1.1.24\lib\net47\mp.pddn.dll</HintPath>
+    <Reference Include="mp.pddn, Version=1.1.26.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.1.1.26\lib\net47\mp.pddn.dll</HintPath>
     </Reference>
     <Reference Include="MsgPack, Version=0.8.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.0.8.0\lib\net46\MsgPack.dll</HintPath>
@@ -77,6 +77,9 @@
     </Reference>
     <Reference Include="SevenZip, Version=9.20.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\LZMA-SDK.9.20\lib\net20\SevenZip.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpCompress, Version=0.20.0.0, Culture=neutral, PublicKeyToken=afb0a02973931d96, processorArchitecture=MSIL">
+      <HintPath>packages\SharpCompress.0.20.0\lib\net45\SharpCompress.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <HintPath>packages\SharpDX.4.0.1\lib\net45\SharpDX.dll</HintPath>
@@ -203,13 +206,14 @@
     <Compile Include="excel\SplitNodes.cs" />
     <Compile Include="generic\CastToAll.cs" />
     <Compile Include="generic\DictionaryNodes.cs" />
+    <Compile Include="generic\ExpandObjectNode.cs" />
     <Compile Include="generic\GenericAsObjectNode.cs" />
     <Compile Include="generic\GenericDictionaryNode.cs" />
     <Compile Include="generic\GenericKeepLastNode.cs" />
     <Compile Include="generic\GenericZip.cs" />
     <Compile Include="generic\NodeEvaluateNode.cs" />
     <Compile Include="generic\ObjectUtils.cs" />
-    <Compile Include="generic\StringSpreadToFramesNode.cs" />
+    <Compile Include="generic\ManualGenericQueue.cs" />
     <Compile Include="generic\TupleNodes.cs" />
     <Compile Include="graphs\AbstractGraphGeneratorNode.cs" />
     <Compile Include="graphs\Neighbours.cs" />
@@ -279,6 +283,7 @@
     </Compile>
     <Compile Include="vvvv\NodeGrapher.cs" />
     <Compile Include="vvvv\vvvvNodePathNode.cs" />
+    <Compile Include="windows\FileCompressorNodes.cs" />
     <Compile Include="windows\HandleWindowsPIDNode.cs" />
     <Compile Include="windows\PIDWindowsHandleNode.cs" />
     <Compile Include="windows\WindowsGetForegroundWindowNode.cs" />
