--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -54,11 +54,11 @@
     <Reference Include="LzmaSharp">
       <HintPath>dlls\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.1.47.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.1.47-beta\lib\net47\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=0.1.50.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.1.50-beta\lib\net47\md.stdl.dll</HintPath>
     </Reference>
-    <Reference Include="mp.pddn, Version=1.1.26.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\mp.pddn.1.1.26\lib\net47\mp.pddn.dll</HintPath>
+    <Reference Include="mp.pddn, Version=1.1.27.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.1.1.27\lib\net47\mp.pddn.dll</HintPath>
     </Reference>
     <Reference Include="MsgPack, Version=0.8.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.0.8.0\lib\net46\MsgPack.dll</HintPath>
@@ -211,6 +211,7 @@
     <Compile Include="generic\GenericDictionaryNode.cs" />
     <Compile Include="generic\GenericKeepLastNode.cs" />
     <Compile Include="generic\GenericZip.cs" />
+    <Compile Include="generic\KeepTemporary.cs" />
     <Compile Include="generic\NodeEvaluateNode.cs" />
     <Compile Include="generic\ObjectUtils.cs" />
     <Compile Include="generic\ManualGenericQueue.cs" />
