--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,10 +32,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EPPlus, Version=4.1.1.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
-      <HintPath>packages\EPPlus.4.1.1\lib\net40\EPPlus.dll</HintPath>
+    <Reference Include="EPPlus, Version=4.5.2.1, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>packages\EPPlus.4.5.2.1\lib\net40\EPPlus.dll</HintPath>
     </Reference>
     <Reference Include="EPPlus.Extensions, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\EPPlus.Extensions.2.0.0.0\lib\net45\EPPlus.Extensions.dll</HintPath>
@@ -54,32 +56,31 @@
     <Reference Include="LzmaSharp">
       <HintPath>dlls\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.2.1-beta\lib\Net47\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=0.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.0.2.3-beta\lib\Net47\md.stdl.dll</HintPath>
     </Reference>
-    <Reference Include="mp.pddn, Version=1.1.28.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\mp.pddn.1.1.28\lib\net47\mp.pddn.dll</HintPath>
+    <Reference Include="mp.pddn, Version=1.1.33.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.1.1.33\lib\net47\mp.pddn.dll</HintPath>
     </Reference>
-    <Reference Include="MsgPack, Version=0.8.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
-      <HintPath>packages\MsgPack.Cli.0.8.0\lib\net46\MsgPack.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="MsgPack, Version=1.0.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
+      <HintPath>packages\MsgPack.Cli.1.0.0\lib\net46\MsgPack.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PowerArgs, Version=2.8.1.0, Culture=neutral, PublicKeyToken=26a276264bbd55b8, processorArchitecture=MSIL">
-      <HintPath>packages\PowerArgs.2.8.1.0\lib\net45\PowerArgs.dll</HintPath>
+    <Reference Include="PowerArgs, Version=3.0.0.0, Culture=neutral, PublicKeyToken=26a276264bbd55b8, processorArchitecture=MSIL">
+      <HintPath>packages\PowerArgs.3.0.0\lib\netstandard2.0\PowerArgs.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="QuickGraph">
       <HintPath>dlls\QuickGraph.dll</HintPath>
     </Reference>
-    <Reference Include="SevenZip, Version=9.20.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\LZMA-SDK.9.20\lib\net20\SevenZip.dll</HintPath>
+    <Reference Include="SevenZip, Version=18.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\LZMA-SDK.18.1.0\lib\net20\SevenZip.dll</HintPath>
     </Reference>
-    <Reference Include="SharpCompress, Version=0.20.0.0, Culture=neutral, PublicKeyToken=afb0a02973931d96, processorArchitecture=MSIL">
-      <HintPath>packages\SharpCompress.0.20.0\lib\net45\SharpCompress.dll</HintPath>
+    <Reference Include="SharpCompress, Version=0.21.1.0, Culture=neutral, PublicKeyToken=afb0a02973931d96, processorArchitecture=MSIL">
+      <HintPath>packages\SharpCompress.0.21.1\lib\net45\SharpCompress.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <HintPath>packages\SharpDX.4.0.1\lib\net45\SharpDX.dll</HintPath>
@@ -103,6 +104,7 @@
       <HintPath>dlls\vvvvlib\System.ComponentModel.Composition.CodePlex.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Interactive, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
@@ -144,12 +146,16 @@
       <HintPath>dlls\vvvvlib\System.Reflection.Context.CodePlex.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="unvell.ReoGrid, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\unvell.ReoGrid.dll.2.1.0.0\lib\20\unvell.ReoGrid.dll</HintPath>
+    </Reference>
     <Reference Include="vJoyInterfaceWrap">
       <HintPath>dlls\vJoyInterfaceWrap.dll</HintPath>
     </Reference>
@@ -232,7 +238,22 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="quaternion\SpectralQuaternionMultiplyNode.cs" />
     <Compile Include="raw\RawLZMANode.cs" />
-    <Compile Include="raw\RawReadRangeNode.cs" />
+    <Compile Include="raw\RawMemoryMappedFile.cs" />
+    <Compile Include="raw\RawTakeUntilNull.cs" />
+    <Compile Include="reogrid\GetButtonBangs.cs" />
+    <Compile Include="reogrid\NumberGrid.cs" />
+    <Compile Include="reogrid\NumberGrid.Designer.cs">
+      <DependentUpon>NumberGrid.cs</DependentUpon>
+    </Compile>
+    <Compile Include="reogrid\ProgressBars.cs" />
+    <Compile Include="reogrid\QueryCell.cs" />
+    <Compile Include="reogrid\RotationFormulaProviderNode.cs" />
+    <Compile Include="reogrid\SetValueNodes.cs" />
+    <Compile Include="reogrid\SpreadsheetSerialization.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="reogrid\ProgressCellBodies.cs" />
+    <Compile Include="reogrid\WorksheetInfo.cs" />
     <Compile Include="shaders\PreprocessorOptionsNode.cs" />
     <Compile Include="skeleton\CreateJoint.cs" />
     <Compile Include="skeleton\Generics.cs" />
@@ -263,6 +284,7 @@
     <Compile Include="transform\ChevyRayRectanglePackerNode.cs" />
     <Compile Include="transform\TransformGetQuaternionNode.cs" />
     <Compile Include="value\BeatValueLFO.cs" />
+    <Compile Include="value\BezierSplineTangent.cs" />
     <Compile Include="value\LongitudeLatitude.cs" />
     <Compile Include="value\PulseNode.cs" />
     <Compile Include="value\Stopwatch.cs" />
@@ -294,6 +316,7 @@
     <Compile Include="windows\WindowsHandleFromPointNode.cs" />
     <Compile Include="windows\WindowsLaunchOSKNode.cs" />
     <Compile Include="windows\WindowsRemoveBorderNode.cs" />
+    <Compile Include="windows\WindowsSendMessage.cs" />
     <Compile Include="windows\WindowsWindowPosNode.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -304,6 +327,11 @@
     <Content Include="vJoyInterface.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="reogrid\NumberGrid.resx">
+      <DependentUpon>NumberGrid.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
