--- a/packages.config
+++ b/packages.config
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EPPlus" version="4.1.1" targetFramework="net461" />
+  <package id="EPPlus" version="4.5.2.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
-  <package id="LZMA-SDK" version="9.20" targetFramework="net461" />
-  <package id="md-stdl" version="0.2.1-beta" targetFramework="net47" />
+  <package id="LZMA-SDK" version="18.1.0" targetFramework="net47" />
+  <package id="md-stdl" version="0.2.3-beta" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="mp.pddn" version="1.1.28" targetFramework="net47" />
-  <package id="MsgPack.Cli" version="0.8.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="PowerArgs" version="2.8.1.0" targetFramework="net461" />
-  <package id="SharpCompress" version="0.20.0" targetFramework="net47" />
+  <package id="mp.pddn" version="1.1.33" targetFramework="net47" />
+  <package id="MsgPack.Cli" version="1.0.0" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
+  <package id="PowerArgs" version="3.0.0" targetFramework="net47" />
+  <package id="SharpCompress" version="0.21.1" targetFramework="net47" />
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
@@ -24,6 +24,6 @@
   <package id="System.Reactive.Linq" version="4.0.0-preview00001" targetFramework="net461" />
   <package id="System.Reactive.PlatformServices" version="4.0.0-preview00001" targetFramework="net461" />
   <package id="System.Reactive.Windows.Threading" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="VVVV.Packs.Timing" version="0.8.2" targetFramework="net461" />
+  <package id="unvell.ReoGrid.dll" version="2.1.0.0" targetFramework="net47" />
   <package id="xxHash.NET" version="1.0.2" targetFramework="net461" />
 </packages>
